--- a/index.html
+++ b/index.html
@@ -19,3 +19,11 @@
   />
 </div>
 <p id="showInputDebounce"></p>
+
+<p>Events</p>
+
+<div class="grandParent">
+  <div class="parent">
+    <div class="child"></div>
+  </div>
+</div>
